cmake_minimum_required(VERSION 3.15)
project(CppCodes)

set(CMAKE_CXX_STANDARD 14)

add_executable(CppCodes main.cpp)
add_executable(IntType ch1/types/IntType.cpp)
add_executable(sizeof ch1/sizeof.cpp)
add_executable(float_type ch1/types/float_type.cpp)
add_executable(char_type ch1/types/char_type.cpp)
add_executable(trans_mining ch1/trans_mining.cpp)
add_executable(string_type ch1/types/string_type.cpp)
add_executable(boolean_type ch1/types/boolean_type.cpp)
add_executable(c_in ch1/c_in.cpp)
add_executable(plus_etc ch1/operate/plus_etc.cpp)
add_executable(mod ch1/operate/mod.cpp)
add_executable(add_before_after ch1/operate/add_before_after.cpp)
add_executable(if_flow ch1/flow/if_flow.cpp)
add_executable(three_pigs ch1/flow/three_pigs.cpp)
add_executable(three_item ch1/flow/three_item.cpp)
add_executable(switch_case ch1/flow/switch_case.cpp)
add_executable(while_ ch1/flow/while_.cpp)
add_executable(random_while ch1/flow/random_while.cpp)
add_executable(do_while ch1/flow/do_while.cpp)
add_executable(NarcissisticFlower ch1/flow/NarcissisticFlower.cpp)