cmake_minimum_required(VERSION 3.15)
project(CppCodes)

set(CMAKE_CXX_STANDARD 14)

add_executable(CppCodes main.cpp)
add_executable(IntType ch1/types/IntType.cpp)
add_executable(sizeof ch1/operate/sizeof.cpp)
add_executable(float_type ch1/types/float_type.cpp)
add_executable(char_type ch1/types/char_type.cpp)
add_executable(trans_mining ch1/operate/trans_mining.cpp)
add_executable(string_type ch1/types/string_type.cpp)
add_executable(boolean_type ch1/types/boolean_type.cpp)
add_executable(c_in ch1/operate/c_in.cpp)
add_executable(plus_etc ch1/operate/plus_etc.cpp)
add_executable(mod ch1/operate/mod.cpp)
add_executable(add_before_after ch1/operate/add_before_after.cpp)
add_executable(if_flow ch1/flow/if_flow.cpp)
add_executable(three_pigs ch1/flow/three_pigs.cpp)
add_executable(three_item ch1/flow/three_item.cpp)
add_executable(switch_case ch1/flow/switch_case.cpp)
add_executable(while_ ch1/flow/while_.cpp)
add_executable(random_while ch1/flow/random_while.cpp)
add_executable(do_while ch1/flow/do_while.cpp)
add_executable(NarcissisticFlower ch1/flow/NarcissisticFlower.cpp)
add_executable(fori ch1/flow/fori.cpp)
add_executable(knock_table ch1/flow/knock_table.cpp)
add_executable(include_loop ch1/flow/include_loop.cpp)
add_executable(cfkj_table ch1/flow/cfkj_table.cpp)
add_executable(goto_type ch1/flow/goto_type.cpp)
add_executable(def_arr ch1/arr/def_arr.cpp)
add_executable(five_pig ch1/arr/five_pig.cpp)
add_executable(reverse_arr ch1/arr/reverse_arr.cpp)
add_executable(bubble_sorting ch1/arr/bubble_sorting.cpp)
add_executable(def_two_arr ch1/arr/def_two_arr.cpp)
add_executable(score_couting ch1/arr/score_couting.cpp)
add_executable(add ch1/fun/add.cpp)
add_executable(swap ch1/fun/swap_.cpp)
add_executable(compare ch1/fun/compare.cpp)
add_executable(def_p ch1/pointer/def_p.cpp)
add_executable(p_mem ch1/pointer/p_mem.cpp)
add_executable(p_npe ch1/pointer/p_npe.cpp)
add_executable(p_valid ch1/pointer/p_valid.cpp)
add_executable(_const ch1/pointer/_const.cpp)
add_executable(p_arr ch1/pointer/p_arr.cpp)
add_executable(p_func ch1/pointer/p_func.cpp)
add_executable(bubblefun ch1/pointer/bubblefun.cpp)
add_executable(struct_stu ch1/struct/struct_stu.cpp)
add_executable(struct_arr ch1/struct/struct_arr.cpp)
add_executable(struct_p ch1/struct/struct_p.cpp)
add_executable(struct_fun ch1/struct/struct_fun.cpp)
add_executable(struct_const ch1/struct/struct_const.cpp)